package com.allen.origin.entity.domain;

/**
 * @author Allen Wan
 * @version 1.0
 */
public enum RequirementTicketState {
    PUBLISHED, BE_APPLIED, PROCESSED, COMPLETED
}
